[gd_scene load_steps=13 format=3 uid="uid://cixj1ykvju5v2"]

[ext_resource type="Script" uid="uid://dmdkbtc7oi0gh" path="res://script/brick.gd" id="1_0w5h4"]
[ext_resource type="Texture2D" uid="uid://bpu74boc4urrs" path="res://sprite/all the small blocks together.png" id="2_7mekc"]
[ext_resource type="Texture2D" uid="uid://i70ofguicb50" path="res://sprite/brick particles.png" id="3_7mekc"]
[ext_resource type="AudioStream" uid="uid://chhy42b001hm4" path="res://sounds/bump.wav" id="4_c34n8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5p85m"]
size = Vector2(16, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mt0q5"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7mekc"]
size = Vector2(16, 49.167)

[sub_resource type="Animation" id="Animation_k3qg7"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AllTheSmallBlocksTogether:offset:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.125001, 0, 0.125001, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("kill/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("bump:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_sul1p"]
resource_name = "bump"
length = 0.250002
step = 0.0166667
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AllTheSmallBlocksTogether:offset:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, 0, 0, 0, 0, -6, -0.05, 0, 0, 0, -6, 0, 0, 0, 0, 0, -0.017, 5, 0, 0),
"times": PackedFloat32Array(0, 0.0833333, 0.15, 0.25)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("kill/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("bump:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kq0y0"]
_data = {
&"RESET": SubResource("Animation_k3qg7"),
&"bump": SubResource("Animation_sul1p")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c34n8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ci8dj"]
size = Vector2(299.984, 7.4510345)

[node name="brick" type="Node2D"]
script = ExtResource("1_0w5h4")

[node name="AllTheSmallBlocksTogether" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("2_7mekc")
hframes = 4
vframes = 3
frame = 1

[node name="brick" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="brick"]
shape = SubResource("RectangleShape2D_5p85m")

[node name="brick_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="brick_area"]
scale = Vector2(0.506386, 0.506386)
shape = SubResource("RectangleShape2D_mt0q5")

[node name="block_area2" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="block_area2"]
position = Vector2(0, 11.05)
scale = Vector2(0.159999, 0.119999)
shape = SubResource("RectangleShape2D_7mekc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_kq0y0")
}

[node name="edible2" type="Area2D" parent="."]
scale = Vector2(1.33619, 1.33619)

[node name="CollisionShape2D" type="CollisionShape2D" parent="edible2"]
scale = Vector2(1.3197432, 1.2)
shape = SubResource("RectangleShape2D_c34n8")

[node name="BrickParticles" type="Sprite2D" parent="."]
visible = false
position = Vector2(23, -4)
texture = ExtResource("3_7mekc")
hframes = 2
vframes = 2

[node name="BrickParticles2" type="Sprite2D" parent="."]
visible = false
position = Vector2(31, -4)
texture = ExtResource("3_7mekc")
hframes = 2
vframes = 2
frame = 1

[node name="BrickParticles3" type="Sprite2D" parent="."]
visible = false
position = Vector2(23, 4)
texture = ExtResource("3_7mekc")
hframes = 2
vframes = 2
frame = 1

[node name="BrickParticles4" type="Sprite2D" parent="."]
visible = false
position = Vector2(31, 4)
texture = ExtResource("3_7mekc")
hframes = 2
vframes = 2
frame = 3

[node name="kill" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="kill"]
position = Vector2(1.19209e-07, -10.3480015)
scale = Vector2(0.032598194, 0.89866734)
shape = SubResource("RectangleShape2D_ci8dj")
disabled = true
debug_color = Color(0.919403, 0.247321, 0.3578, 0.42)

[node name="bump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_c34n8")
volume_db = -3.0

[connection signal="area_entered" from="brick_area" to="." method="_on_brick_area_area_entered"]
[connection signal="area_entered" from="block_area2" to="." method="_on_bottom_check_area_entered"]
[connection signal="area_exited" from="block_area2" to="." method="_on_bottom_check_area_exited"]
